--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .App-logo {
   height: 40vmin;
-  pointer-events: none;
+  pointer-events: none; 
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -32,24 +32,25 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
 
 .footer {
-  position:fixed;
-  left:0px;
-  bottom:0px;
-  height:30px;
+  position: fixed;
+  left: 0px;
+  bottom: 0px;
+  height: 30px;
   text-align: center;
   min-width: 100%;
   background: rgb(196, 196, 196, .2);
   color: white;
 }
 
-.topbar{
-  background-color: blue; 
+.topbar {
+  background-color: blue;
 }
 
 .homepage {
@@ -59,138 +60,116 @@
   -moz-transform: translateX(-50%) translateY(-50%);
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  color: rgb(0, 0, 0)  
+  color: rgb(0, 0, 0)
 }
-.span { 
-  float: right; 
-  width: 400px; 
+
+.span {
+  float: right;
+  width: 400px;
 }
 
 .Split {
-  background: #000000;   
+  background: #000000;
 }
 
 .Tab-text {
-  color:rgb(255, 255, 255)
+  color: rgb(255, 255, 255)
 }
 
 .Button-color {
-  background-color: rgb(0, 0, 0)   
+  background-color: rgb(0, 0, 0)
 }
 
 .Icon-color {
-  color: #ffffff;
+  color: #ff0000;
+}
+.Stack-options {
+  justify-content: center;
+  align-items: center;
 }
 
-.Overview-container {
+.Flex-options{
+  justify-content: center;
+  align-items: center;
+}
+/* All logos scaled by 5 currently*/
+.logo {
+  height: 37px;
+  width: 230px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.logo_intel {
+  height: 37px;
+  width: 275px;
+  padding-left: 20px;
+  padding-right: 20px; 
+}
+
+.logo_verizon {
+  height: 37px;
+  width: 328px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.stack-item-padding {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.video {
+  height: 600px;
+  width: 800px;
+}
+
+.h1 {
+  font-size: xx-large;
+  color: #ffffff;
+  text-align: center;
+}
+
+.box{
+  height: 600px;
+  width: 800px;  
+}
+
+.Overview-card {
+  height: vh; 
+  /* Centering children vertically and horizontally */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background:rgba(196, 196, 196, .4);
+}
+
+.Overview-container { 
   padding-left: 10%;
   padding-right: 10%;
   padding-top: 10px;
   max-width: 100em;
   margin: auto;
-  color: white;
+  color: rgb(0, 0, 0); 
 
 }
-.Overview-card a {
-  color: rgb(30, 0, 202);
-} 
 
-.Overview-card {
-  height: 40vh;
-  /* Centering children vertically and horizontally */
-  display: flex;
+.popover {
   justify-content: center;
-  align-items: center;
-  background:rgba(196, 196, 196, .4); 
-  color: #000000;
-}
-
-.box {
-  height: 40vh;
-  width: 60vh;
-}
-
-.Description-card {
-  max-height: 250px;
-    
-  background:rgb(255, 255, 255);  
-  color: #000000; 
-}
-
-.Description-list {
-  font-size: medium; 
-}
-
-.Collections-card {
-  width: 25%;
-  background:rgba(196, 196, 196, .4);
-  color: white;
-}
-
-.Gallery-options{
-  justify-content: center;
-  align-items: center;
-  padding-top: 5%;
-  
-}
-
-.Gallery-options-two{
-  justify-content: center;
-  align-items: center;
-}
-
-.Card-Spacing{
-  padding-left: 5%;
-  padding-right: 5%; 
-}
-
-.Card-Size{
-  width: 10vh;
-  height: 10vh; 
-}
-
-.Overview-top-spacing {
-  width: 100%;
-  height: 20vh;
-}
-
-/* spacing for lines of text and images in the overview */
-.Overview-item-padding {
-  padding-bottom: 30px;
-  color:rgb(255, 255, 255);
-}
-
-.box {
-  height: 70vh;
-  width: 100vw;
-}
-
-.learn-more-tab {
-  visibility: hidden;
-}
-
-.use-cases {
-  max-width: 30%;
-  padding-bottom: 30px;
-}
-
-/* keep the navbar at the top of the page when scrolling */
-.navbar {
-  position: fixed;
-  background: #000000; 
-  width: 100%;
-  z-index: 1;
-}
-
-/* so top content isn't stuck under the navbar */
-.page-padding {
-  padding-top: 50px;
-}
-
-.arrow {
+  align-items: center; 
   text-align: center;
-  margin: 8% 0;
 }
+
+.card{
+  height: 50px; 
+  width: 100px;
+  background:rgba(70, 70, 70, 0.4);
+  color:rgb(255, 255, 255)
+}
+
+.Description-list{
+  color: #000000; 
+} 
 
 .bounce {
   -moz-animation: bounce 2s infinite;
@@ -199,12 +178,19 @@
 }
 
 @keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
+
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
     transform: translateY(0);
   }
+
   40% {
     transform: translateY(-30px);
   }
+
   60% {
     transform: translateY(-15px);
   }
