--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,12 @@
   text-align: center;
 }
 
+.h2 {
+  font-size: large;
+  color: #ffffff;
+  text-align: left; 
+}
+
 .box{
   height: 600px;
   width: 800px;  
